# django_chatbot

./: .gitignore  pyproject.toml
chatbot/: urls.py  views.py
django_chatbot/: settings.py
templates/: chatbot.html
