[tool.poetry]
name = "django-chatbot"
version = "0.1.0"
description = ""
authors = ["joshws <joshxteen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


select = ["E", "F", "I"]
ignore = ["E501"]